fix: fix footer alignment to the bottom

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   background-color: transparent;
+  flex: 0 0 auto;
 
   &__link {
     display: flex;
