--- a/src/routes/root/style.module.scss
+++ b/src/routes/root/style.module.scss
@@ -1,6 +1,7 @@
 .root {
   width: 100%;
   max-width: 1440px;
+  min-height: 100vh;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -9,6 +10,7 @@
 
 .main {
   width: 100%;
+  flex: 1 0 auto;
 }
 
 .padding100 {
